data/derived/comb/progs/unify/prog4628.ml.out
Characters 118-137:
  | Average (e1,e2) -> buildAverage(e1,e2);;
                       ^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
